# ChangeLog for x11-plugins/pidgin-birthday
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Mar 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
  -pidgin-birthday-1.4.ebuild, +pidgin-birthday-reminder-1.4.ebuild:
  Fixed name as adviced in bug 286548

  05 Mar 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
  -pidgin-birthday-1.3.ebuild, +pidgin-birthday-1.4.ebuild:
  Version bump to pidgin-birthday-1.4

  06 Feb 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
  -pidgin-birthday-1.2.1.ebuild, +pidgin-birthday-1.3.ebuild:
  Version bump

  13 Dec 2009; Angelo D'Autilia (sYdRo) <sydro@salug.it>
  +pidgin-birthday-1.2.1.ebuild, +metadata.xml:
  New Ebuild for bug 286548
