@@ -1,4 +1,4 @@
-DIST birthday_reminder-1.4.tar.gz 464218 RMD160 bf20f355ba558eb598089d91e2c36c5d265af322 SHA1 2416915f7693213d4c774f967065c628a50d9b3b SHA256 3a847db327ec94139827093e04cc8a5beb2a9274d536eed49a2fc94f89fab271
-EBUILD pidgin-birthday-reminder-1.4.ebuild 610 RMD160 ac9ab30b205362cde86ccd9c5624a866638b8478 SHA1 fc423eb2d81fae17ee5101bfd265e493655bfa73 SHA256 e92eb1aa2fea2010e1ffc7e20a11347260001c3fafea4e1475531c5333bf2c51
-MISC ChangeLog 718 RMD160 f7e730c0723ee0618d0bce86eb1d6023120cd473 SHA1 90b29db61a07b7e6af76cecb82bde35f1860af36 SHA256 63257344ebe40a8f0667511fc03c1d29d70ef80272a84040a6a56dcb4a4c2e06
+DIST pidgin-birthday-reminder-1.5.tar.gz 462084 RMD160 dbd68bf4c4c3ed3ea06706f37ffb2372ecb5e05e SHA1 3ffc3d65963b1a03f1d2843f147b6065ac298672 SHA256 ee3805cb7b89526f71c89d7856606d8bbd2fd91440b357d3cbbc5e5d5d070461
+EBUILD pidgin-birthday-reminder-1.5.ebuild 554 RMD160 f987bc703829f93b3ca1a33682c20a21ea7c2be5 SHA1 bbd999fc7abe4a89fbf8e5f1eaf51f51534b089a SHA256 bd197f94b5085cf5811d68a354748ec8434487f7bf1c2e7eb313753da087ac9b
+MISC ChangeLog 871 RMD160 2314a381f343e3d3e2a227b6797771b3360b2064 SHA1 2c11052499a06d1ee2f1396b3858c50040399fca SHA256 d8b4782bbe8f2773f1aeae2a33f532a267bbcbf3a8bf2dbb87474fc46b786e55
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
