@@ -4,10 +4,9 @@
 
 EAPI="2"
 
-MY_P="birthday_reminder-${PV}"
 DESCRIPTION="Plugin for Pidgin that reminds you of your buddies birthdays"
 HOMEPAGE="https://sourceforge.net/projects/pidgin-birthday"
-SRC_URI="mirror://sourceforge/${PN/-reminder/}/${MY_P}.tar.gz"
+SRC_URI="mirror://sourceforge/${PN/-reminder/}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -16,8 +15,6 @@ IUSE=""
 
 DEPEND="net-im/pidgin[gtk]"
 RDEPEND="${DEPEND}"
-
-S=${WORKDIR}/${MY_P}
 
 src_install() {
 	emake install DESTDIR="${D}" || die "install fail"
