@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Apr 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
+  -pidgin-birthday-reminder-1.4.ebuild,
+  +pidgin-birthday-reminder-1.5.ebuild:
+  Version bump
+
   11 Mar 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
   -pidgin-birthday-1.4.ebuild, +pidgin-birthday-reminder-1.4.ebuild:
   Fixed name as adviced in bug 286548
